# ChangeLog for dev-python/autopep8
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/ChangeLog,v 1.10 2012/05/29 15:16:54 jlec Exp $

  29 May 2012; Justin Lecher <jlec@gentoo.org> autopep8-0.6.ebuild:
  Added ~-linux keywords, tested by me

*autopep8-0.6 (09 May 2012)

  09 May 2012; Sebastian Pipping <sping@gentoo.org> +autopep8-0.6.ebuild:
  Bump to 0.6

*autopep8-0.5.2-r1 (05 May 2012)

  05 May 2012; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-0.5.2-r1.ebuild,
  -autopep8-0.5.2_p1.ebuild, metadata.xml:
  Remove unnecessary _p1 version and do a simple revbump instead. Add python
  herd to metadata

*autopep8-0.5.2_p1 (04 May 2012)

  04 May 2012; Sebastian Pipping <sping@gentoo.org> +autopep8-0.5.2_p1.ebuild,
  +files/autopep8-0.5.2-issue-10.patch, metadata.xml:
  Add upstream patch for issue 10 (runtime exception), add myself as backup
  maintainer

  31 Mar 2012; Mike Gilbert <floppym@gentoo.org> autopep8-0.5.2.ebuild,
  autopep8-0.5.ebuild, autopep8-9999.ebuild:
  Only restrict 2.5-cpython.

  31 Mar 2012; Mike Gilbert <floppym@gentoo.org> autopep8-0.5.2.ebuild,
  autopep8-0.5.ebuild, autopep8-9999.ebuild:
  Make setuptools a runtime dep, and restrict python-2.5.

*autopep8-0.5.2 (12 Mar 2012)

  12 Mar 2012; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-0.5.2.ebuild:
  Version bump

*autopep8-9999 (27 Feb 2012)

  27 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-9999.ebuild:
  Add live ebuild

  15 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> autopep8-0.5.ebuild:
  Add src_test and missing dependency on dev-python/pep8. Fixes bug 403663 by
  Nicolas Pinto <nicolas.pinto@gmail.com>

*autopep8-0.5 (11 Feb 2012)

  11 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-0.5.ebuild,
  +metadata.xml:
  Initial import, ebuild written by Nicolas Pinto <nicolas.pinto@gmail.com> and
  modified by me. Fixes bug 402511
