@@ -1,22 +1,33 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX autopep8-0.5.2-issue-10.patch 837 RMD160 d87ce19cb3e4682119012835064cafe5210cc4b3 SHA1 797c7ff8ff5125e5a170e0be98c0bf838b5718b2 SHA256 ec7a48d8163113d0b034c388d12ced60299019b7502d9d4a8561bfbc7ff54908
 DIST autopep8-0.5.2.tar.gz 10049 RMD160 92a4a8c24bce46338bfa9fe4ab022fb76f8d0407 SHA1 257572c6948bcf64fb42cc8eb8bfb0a1998027d1 SHA256 a9a808bac49605036bdeaa4bf5b50a9bbf87088a54b9a2e54e18c85abcecb70f
 DIST autopep8-0.5.tar.gz 9123 RMD160 d0946f57dabf182d5025c1dc702d95315d003ca4 SHA1 b1544a168d95a5b858c9a431d38b5ab1d06a4065 SHA256 2e724c71b67639695fcc1dc8ef5cb941856a729fcea0b09442be65dbd68af8a6
+DIST autopep8-0.6.2.tar.gz 17043 RMD160 d8112921eb35177cf9ce871f9d8c35d70caed4c6 SHA1 72f22ce54ceb4c102aeb02c74000e7c46c7ebead SHA256 8c25eed675fa07349bf6477eb83c6dbdf234edd11eb446715c6b32028a6b7059
 DIST autopep8-0.6.tar.gz 12730 RMD160 50c30485253ad95e6e03602264a2ee0e0b2f63f6 SHA1 a4e24c1540deafcc3c7593ef25dd39f6836fad83 SHA256 5fac8242161b5cf991fda32872c2163918993e64d432414a801da9de28176992
 EBUILD autopep8-0.5.2-r1.ebuild 915 RMD160 1826fd82e790864e2ff4904754b17dfb78a0ba06 SHA1 ab97c15df4fb4952ca4bf20e28bafb571878f28b SHA256 4304d783cea7436b26726aa711db0856730340a1fe28aa0a74579f3597311867
 EBUILD autopep8-0.5.2.ebuild 840 RMD160 8bb5d32fb5b47189185ab7eac4ce587abe93b92b SHA1 da139684d19f7a75d3c803af548906dcdb4b69ec SHA256 fb8ebc8ec50389cacca49ce79ee2bb562c88b881492561c9e019238cf88cc7b5
 EBUILD autopep8-0.5.ebuild 838 RMD160 2b35cf174610bc5562d176250931dc4ce4935626 SHA1 89605f4050de1ab578bf2ff20a3a43a41db32a40 SHA256 b2f844d64ded050753d6629e19f53df1d8bf5f8c76d97418b19e9b9aea0841df
+EBUILD autopep8-0.6.2.ebuild 898 RMD160 d04d1bdc8e8b5fb7d2c1517d951f2559bf5ac483 SHA1 fec802b359ae970246b34c938ff6ece6e8c79505 SHA256 8e86b916cf1d0466ba99189d14d6ed1e56eb64a5bb391438709cbeb39030d194
 EBUILD autopep8-0.6.ebuild 859 RMD160 2f72f48fc2b33833f5966e37e748007d47033b37 SHA1 58a058aab384f1cc5d09c9e9d816f01164ca8ff1 SHA256 c1852aef6f69a0f09ffe025289d16583301bc95a86667ea7961cf9e1b380d8b0
 EBUILD autopep8-9999.ebuild 1023 RMD160 efcdbbf56c157bf816f6ce5e58a054d8f60af5f8 SHA1 23d1756c9a1f8cd0b649cd0114793780ccbf5d80 SHA256 e669f1acae4d1fc5308641374710c17098ef4a7dd7703d8f18953e3d97274ada
-MISC ChangeLog 1956 RMD160 3dde111b50cf3f6904dd9ad4065a50df2f0ebeb1 SHA1 f0b8983dfcd093be2c439940f4a1279918de5cf2 SHA256 dec80807f4cf86ae6c7ed27c6f5c6d5edfa5805a1726d1956f5cb3865fe753d6
+MISC ChangeLog 2161 RMD160 f8d0002e4331b4c9084c6c992de3cbeeb2335a38 SHA1 1ca6ef25c572d7380243dbcfc941b5ad99fdfd12 SHA256 88471bb8e83e52d36e967c6ba247c03644edcfd02d9ac04c84c6fbba70c0c9cd
 MISC metadata.xml 530 RMD160 3c578a24b8e7051d7d6c8a3ccbf809ad9ea39565 SHA1 21044d0cb1dcf452aad155288120386ef1e50f5f SHA256 a2f56d83d1c4bdf0768bb33384e0e75d633daf05eecf8f6f2e9bac8fa51345b2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
-Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/E6GwACgkQgAnW8HDreRZ6sgCaAjewogdu6OoQDit5/+OJhdmg
-OqoAn3yAcOFyxvkrvs0+UsMy65X90ROs
-=xZqf
+iQIcBAEBCAAGBQJPxRo3AAoJEF0huFKJUZL51YoP/R2OQVTccTyj5eWD1LELr7dz
+hDPyyr+N21OilMKOnOWCqU4hWPPGckwgoxQQTkEdERumsd+TUOFWwHY8bTlUbO4g
+2MuygLbyBGQ1816wrp7VLfoEb8WypeMRrmnMoofdmyEAR6EaJbEZpinUCfiOC3k1
+aF9qsqkfWXBK5BBWGR4JRJGRW7cSV1HFNBBpXOTUbeUY3Ccm3jW0FZmyWh4ZXqUf
+FU+k3nxLV3IEs2qqCtZLhXJXCqp3uLfn+NuekJ+G7oKX0HYzL8utHwL3YcIRv3QQ
+CTL97DnVUQvwblRJAp4PtZ0fDkOm22Ihz1ZlWNVpbLbWW5WEMWAWWxtfKKcaTOX5
+05VvMazHCx35Ud9oGLZS4aKU6iQxEszwBzaVVqSA10Z1Cihr9sVeKqUfL6SHXz/P
+40CYz1UFmkkvZ8EJzv5JREpgAkTsA+eqaj9et/CV7BRUn3T4AIEruTWH/GEd3XyJ
+Z5KNRRVTLzCopiWzAP5Adi7PMeElarFov/s7rxnep8Rl2HRZ1Fze9acvilwCcqou
+0keo6CbYFnh6b+NZxv48C7B6ym5FILjzywulSQXW4y6RuYTdqQGin65EcnT2D0mc
+jNNbLXB0vHjc0lZ6UIaBLN8YowLd6eTkeh8lDIUFSdpmRabhnyE7d3F5OYmJAiFf
+FqPhqv8OaMx+erF/rwCi
+=5Igo
 -----END PGP SIGNATURE-----
