@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/autopep8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/ChangeLog,v 1.10 2012/05/29 15:16:54 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/ChangeLog,v 1.11 2012/05/29 18:49:17 xarthisius Exp $
+
+*autopep8-0.6.2 (29 May 2012)
+
+  29 May 2012; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-0.6.2.ebuild:
+  Version bump wrt #418151 by Ian Delaney <johneed@hotmail.com>. Use github as
+  SRC_URI
 
   29 May 2012; Justin Lecher <jlec@gentoo.org> autopep8-0.6.ebuild:
   Added ~-linux keywords, tested by me
